# knack

./: .gitignore  CMakeLists.txt  README.md
src/: font.cpp  font.hpp  game.cpp  game.hpp  main.cpp  render.cpp  render.hpp  target.cpp  target.hpp  timer.cpp  timer.hpp  window.cpp  window.hpp
